0_Game_System/src/components/pages/CharacterSheet/CharacterSheet.css
/*
    Created on : 04/11/2023
    Author     : Steven
*/

:root{
    --bg-form-neutral: #C1C3C7;
    --bg-form-orden: #0E79B2;
    --bg-form-caos: #E4572E;
    --bg-color-1: #E5E7EB;
    --bg-color-2: #191716;
    --bg-color-3: #F2AF29;
    --bg-color-4: #E63462;
    --bg-color-5: #9E2A2B;
    --bg-color-6: #DD8E2A;
    --bg-color-7: #31E981;
    --bg-color-8: #388697;
    --bg-color-9: #7F5A83;
    --required-color: var(--bg-color-4);
    --bg-color-btn-dice: var(--bg-color-3);
    --bg-title: var(--bg-color-3);
    --bg-loader: var(--bg-color-3);

    --un-border-opacity: 1;
    --border-card: 0.5rem;
}

body{
    scrollbar-color: var(--bg-color-3) var(--bg-color-1) ;
    scrollbar-width: thin;
}

.form-sheet{
    background-color: var(--bg-form-neutral);
    --required-color: #E63462;
    transition-property: background-color;
    transition-duration: .5s;
    transition-timing-function: ease;
    &.orden{
        background-color: var(--bg-form-orden);
        --bg-color-btn-dice: var(--bg-form-orden);
        --required-color: var(--bg-form-orden);
        --bg-title: var(--bg-form-orden);
        --bg-loader: var(--bg-form-orden);
    }
    &.caos{
        background-color: var(--bg-form-caos);
        --bg-color-btn-dice: var(--bg-form-caos);
        --required-color: var(--bg-form-caos);
        --bg-title: var(--bg-form-caos);
        --bg-loader: var(--bg-form-caos);
    }
}

.fieldset-form {
    display: grid;
    min-width: 100%;
    grid-template-columns:100px 1fr;
    grid-row-gap: 10px;
    padding: 1rem 0;
    & legend{
        position: relative;
        top: 15px;
        left: 5px;
    }
}

.fieldset-form.form-title{
    background: var(--bg-title);
    filter: brightness(1.2);
}

.fieldset-form input[type=number]::-webkit-inner-spin-button,
.fieldset-form input[type=number]::-webkit-outer-spin-button{
    -webkit-appearance: none;
    appearance: none;
}
.fieldset-form input[type=number]{
    appearance: textfield;
}
.fieldset-form input[type=number].form-input-y{
    font-size: 2rem;
    font-weight: 700;
}

.fieldset-form select.form-input{
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    background: #fff;
}

.fieldset-form textarea.form-input-y{
    min-height: 7.5rem;
    max-height: 10.5rem;
}

/* info-player */
.fieldset-form.info-player {
    grid-template-columns:100px 1fr;
    grid-template-rows:repeat(6, 2.5rem);
    grid-row-gap: 0px;
}
@media (min-width: 768px) {
    .fieldset-form.info-player {
        grid-template-columns:100px 1fr 120px 1fr;
    }
}

.fieldset-form .form-lbl{
    display: flex;
    align-items: center;
    padding: 0.5rem 0.25rem;
    margin-left: 0.5rem;
    background: #e5e7eb;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-left-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
    border-top-left-radius: 0.5rem;
    border-bottom-left-radius: 0.5rem; 
    line-height: 1.5rem;
    font-size: 1rem;
}
.fieldset-form .form-lbl-y{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5rem 0.75rem;
    margin-top: 0.5rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
    background: #e5e7eb;
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem; 
    line-height: 1.5rem;
    font-size: 1rem;
}

.fieldset-form.info-player .form-lbl{
    margin-top: 0.5rem;
}

.fieldset-form .form-input{
    padding: 0.5rem 0.75rem;
    margin-top: 0.5rem;
    border-radius: 0.5rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0; 
    line-height: 1.5rem;
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
}
.fieldset-form .form-input-y{
    padding: 0.5rem 0.75rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    line-height: 1.5rem;
    font-size: 1rem;
    text-align: center;
}

.fieldset-form .form-checkbox{
    &:checked{
        background-color: var(--required-color) !important;
        color: #000;
    }
}

/* stats-player */
.fieldset-form.stats-player {
    grid-template-columns:repeat(3, 1fr);
    grid-template-rows: 4rem repeat(20, 2.5rem);
    grid-row-gap: 0px;
}
.fieldset-form.stats-player .form-lbl{
    margin-right: 0.5rem;
    border-width: 1px;
    border-top-right-radius: 0rem;
    border-top-left-radius: 0rem;
    border-bottom-left-radius: 0rem; 
}

.fieldset-form.stats-player .stats-main{
    min-width: 80px;
    text-align: center;
    margin-top: 0rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
    border-radius: 0;
}

.fieldset-form.stats-player .stats-sub{
    min-width: 80px;
    margin-top: 0rem;
    margin-right: 0rem;
    border-top-right-radius: 0rem;
    border-bottom-right-radius: 0rem; 
}

.fieldset-form.stats-player .stats-sub-end,
.fieldset-form.skills-player .stats-sub-end{
    min-width: 80px;
    margin-top: 0rem;
    border-top-right-radius: 0rem;
    border-bottom-right-radius: 0rem; 
}

/* skills-player */
.fieldset-form.skills-player{
    grid-row-gap: 0px;
}

.fieldset-form.skills-player .form-lbl-skills{
    display: flex;
    align-items: center;
    padding: 0.5rem 0.25rem;
    margin-top: 0.5rem;
    background: #e5e7eb;
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
    line-height: 1.5rem;
    font-size: 1rem;
}

.fieldset-form.skills-player .skill-level{
    min-width: 80px;
    margin-top: 0rem;
    border-top-right-radius: 0rem;
    border-bottom-right-radius: 0rem;
    text-align: center;
    font-weight: 700;
    font-size: 2rem;
}
.fieldset-form.skills-player .stats-sub,
.fieldset-form.inventory-player .form-input{
    min-width: 80px;
    margin-top: 0rem;
    border-top-right-radius: 0rem;
    border-bottom-right-radius: 0rem; 
}

/* initial-armament */
.fieldset-form.initial-armament .form-lbl{
    margin-top: 0rem;
}
.fieldset-form.initial-armament .form-input{
    min-width: 80px;
    margin-top: 0rem;
}

/* inventory-player */
.fieldset-form.inventory-player {
    grid-template-columns: 1fr 1fr 100px;
    grid-template-rows:repeat(20, 2.5rem);
    grid-row-gap: 0px;
}
.fieldset-form.inventory-player .form-lbl{
    margin-top: 0.5rem;
    margin-right: 0.5rem;
    border-width: 1px;
    border-radius: 0.25rem;
}
.fieldset-form.inventory-player .form-lbl-coins{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5rem 0.25rem;
    background: #e5e7eb;
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
    line-height: 1.5rem;
    font-size: 1rem;
}

.fieldset-form.inventory-player .form-input{
    margin-top: 0rem;
}
.fieldset-form.inventory-player .object-item{
    display: grid;
    grid-template-columns: 1fr 60px 40px;
    padding: 0 0.5rem;
    margin-top: 0rem;
    margin-right: 0.5rem;
}

.fieldset-form.inventory-player .form-input-count{
    max-width: 60px;
    border-color: lightgrey;
    text-align: right;
}

.fieldset-form.inventory-player .btn-delete-object{
    padding: 0 0.25rem;
    max-width: 40px;
    color: red;
}

.fieldset-form.inventory-player .btn-add-object{
    border-width: 1px;
    border-color: rgb(0 0 0 / var(--un-border-opacity));
}

.panel-save{
    position: fixed;
    right: 10px;
    bottom: 10px;
    width: 80px;
    height: 80px;
    display: flex;
    align-items: center;
    justify-items: center;
    padding: 10px 10px;
    border-radius: 5px;
    color: #fff;
    background-color: rgba(51, 51, 51, 0.5); /* Agregamos transparencia al color de fondo */
    backdrop-filter: blur(2px);
    z-index: 5;
}

.panel-save .btn-save-character{
    width: 100%;
    height: 100%;
    background-color: var(--bg-color-1);
    display: flex;
    align-items: center;
    justify-content: center;
    transition-property: background-color;
    transition-duration: .5s;
    transition-timing-function: ease;
    &:hover{
        background-color: var(--bg-color-3);
    }
    &:hover .icon{
        transform: scale(1.4);
    }
    & .icon{
        transform: scale(1);
        transition-property: transform;
        transition-duration: .5s;
        transition-timing-function: ease;
    }
}

.dialog{
    background-color: var(--bg-color-1);
    padding: 10px;
}

.btn-dialog-accept{
    background: var(--bg-color-3);
}

.fieldset-form{
    & .form-input.required-input,
    & .form-input-y.required-input{
        border-width: 2px;
        border-style: solid;
        border-color: var(--required-color);
    }
}

.dialog-body{
    height: 45rem;
    overflow: scroll;
}
@media (max-height:900px){
    .dialog-body{
        height: 35rem;
    }
}
@media (max-height:750px){
    .dialog-body{
        height: 30rem;
    }
}
@media (max-height:550px){
    .dialog-body{
        height: 25rem;
    }
}

.dialog-card{
    padding: 10px;
    background: var(--bg-color-2);
    border-radius: var(--border-card);
    color: #fff;
}

.dialog-table{
    padding: 10px;
    background: var(--bg-color-3);
    border-radius: var(--border-card);
    color: #000;
    & td {
        padding: 0 5px;
    }
}

.stats-player-header{
    min-width: 80px;
    display: flex;
    align-items: center;
    justify-content: end;
    margin-right: 0.5rem;
    & .btn-roll{
        fill: var(--bg-color-btn-dice);
    }
}

.container .screen-loader{
    position: absolute;
    left: 0;
    min-width: 100%;
    height: 100%;
    background-color: #0004;
    z-index: 10;
}

.loader {
    position: absolute;
    width: 100px;
    height: 100px;
    top: calc(50vh - 50px);
    left: calc(50% - 50px);
    z-index: 100;
    background-color: rgba(0, 0, 0, 0.5);
    transform: rotate(45deg);
    overflow: hidden;
    &:after{
        content: '';
        position: absolute;
        inset: 12px;
        margin: auto;
        background: #222b32;
    }
    &:before{
        content: '';
        position: absolute;
        inset: -20px;
        margin: auto;
        background: var(--bg-loader);
        animation: diamondLoader 2s linear infinite;
    }
}
  @keyframes diamondLoader {
    0%  ,10% {
      transform: translate(-100px , -100px) rotate(-45deg)
    }
    90% , 100% {
      transform: translate(0px , 0px) rotate(-45deg)
    }
  }

